<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="horizontal" android:layout_height="wrap_content">
    <ImageView android:src="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/img_face"></ImageView>
    <LinearLayout android:layout_width="wrap_content" android:orientation="vertical" android:id="@+id/layout_context" android:layout_height="wrap_content">
        <TextView android:text="TextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/text_content"></TextView>
        <LinearLayout android:layout_height="wrap_content" android:id="@+id/layout_info" android:layout_width="wrap_content">
            <Button android:id="@+id/button_transmit" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/transmit" android:background="#00000000" android:textColor="#0ff0ff"></Button>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/text_separator_0" android:text="@string/separator"></TextView>
            <Button android:id="@+id/button_collect" android:layout_height="wrap_content" android:layout_width="wrap_content" android:background="#00000000" android:text="@string/collect" android:textColor="#0ff0ff"></Button>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/text_separator_1" android:text="@string/separator"></TextView>
            <Button android:id="@+id/button_comment" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/comment" android:background="#00000000" android:textColor="#0ff0ff"></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
